--- a/package.json
+++ b/package.json
@@ -7,116 +7,127 @@
     "vscode": ">=1.97.0"
   },
   "categories": [
-    "Debuggers" 
+    "Debuggers"
   ],
   "activationEvents": [
     "onLanguage:javascript",
-    "onLanguage:typescript" 
+    "onLanguage:typescript"
   ],
   "main": "./dist/extension.js",
   "contributes": {
-"configuration": {
-  "title": "quick-console-logger",
-  "properties": {
-    "quick-console-logger.VarPilotSymbol": {
-      "type": "string",
-      "default": "::",
-      "description": "Variable Identifier|变量标识符号"
+    "configuration": {
+      "title": "quick-console-logger",
+      "properties": {
+        "quick-console-logger.VarPilotSymbol": {
+          "type": "string",
+          "default": "::",
+          "description": "Variable Identifier|变量标识符号"
+        },
+        "quick-console-logger.QuotationMark": {
+          "type": "string",
+          "enum": [
+            "single",
+            "double"
+          ],
+          "default": "double",
+          "description": "Quotation Mark Type (Single or Double)|引号类型（单引号或双引号）"
+        },
+        "quick-console-logger.ShowLogSemicolon": {
+          "type": "boolean",
+          "default": true,
+          "description": "Show Semicolon at the End of console.log|是否在 console.log 语句末尾显示分号"
+        },
+        "quick-console-logger.LogMethod": {
+          "type": "string",
+          "default": "console.log",
+          "description": "Log Method (e.g., console.log, console.info)|日志方法（如：console.log, console.info 等）"
+        },
+        "quick-console-logger.ShowLineTag": {
+          "type": "boolean",
+          "default": true,
+          "description": "Show Line Tag|是否显示行号标记"
+        },
+        "quick-console-logger.LineTagAtBeginOrEnd": {
+          "type": "string",
+          "enum": [
+            "begin",
+            "end"
+          ],
+          "default": "begin",
+          "description": "Line Tag Position (Beginning or End)|行号标记位置（开始或结束）"
+        },
+        "quick-console-logger.ShowFilePath": {
+          "type": "boolean",
+          "default": true,
+          "description": "whether Show File Path|是否显示文件路径"
+        },
+        "quick-console-logger.FilePathType": {
+          "type": "string",
+          "default": "short",
+          "enum": [
+            "short",
+            "full",
+            "custom"
+          ],
+          "description": "File Path Format Type (short, full, custom)|文件路径显示类型：short(仅文件名)、full(相对路径)、custom(自定义)"
+        },
+        "quick-console-logger.CustomFormat": {
+          "type": "string",
+          "default": "${fileName} ${varName}::: ",
+          "description": "Custom log format, available variables: ${fileName}, ${filePath}, ${fullPath}, ${varName}, ${lineNumber}|自定义日志格式，可用变量：${fileName}, ${filePath}, ${fullPath}, ${varName}, ${lineNumber}"
+        }
+      }
     },
-    "quick-console-logger.QuotationMark": {
-      "type": "string",
-      "enum": ["single", "double"],
-      "default": "double",
-      "description": "Quotation Mark Type (Single or Double)|引号类型（单引号或双引号）"
-    },
-    "quick-console-logger.ShowLogSemicolon": {
-      "type": "boolean",
-      "default": true,
-      "description": "Show Semicolon at the End of console.log|是否在 console.log 语句末尾显示分号"
-    },
-    "quick-console-logger.LogMethod": {
-      "type": "string",
-      "default": "console.log",
-      "description": "Log Method (e.g., console.log, console.info)|日志方法（如：console.log, console.info 等）"
-    },
-    "quick-console-logger.ShowLineTag": {
-      "type": "boolean",
-      "default": true,
-      "description": "Show Line Tag|是否显示行号标记"
-    },
-    "quick-console-logger.LineTagAtBeginOrEnd": {
-      "type": "string",
-      "enum": ["begin", "end"],
-      "default": "begin",
-      "description": "Line Tag Position (Beginning or End)|行号标记位置（开始或结束）"
-    },
-    "quick-console-logger.ShowFilePath": {
-      "type": "boolean",
-      "default": true,
-      "description": "whether Show File Path|是否显示文件路径"
-    },
-    "quick-console-logger.FilePathType": {
-      "type": "string",
-      "default": "short",
-      "enum": ["short", "full", "custom"],
-      "description": "File Path Format Type (short, full, custom)|文件路径显示类型：short(仅文件名)、full(相对路径)、custom(自定义)"
-    },
-    "quick-console-logger.CustomFormat": {
-      "type": "string",
-      "default": "${fileName} ${varName}::: ",
-      "description": "Custom log format, available variables: ${fileName}, ${filePath}, ${fullPath}, ${varName}, ${lineNumber}|自定义日志格式，可用变量：${fileName}, ${filePath}, ${fullPath}, ${varName}, ${lineNumber}"
-    }
-  }
-},
     "commands": [
-    {
-      "command": "quick-console-logger.qlog",
-      "title": "Insert console.log"
-    },
-    {
-      "command": "quick-console-logger.qerror",
-      "title": "Insert console.error"
-    },
-    {
-      "command": "quick-console-logger.qwarn",
-      "title": "Insert console.warn"
-    },
-    {
-      "command": "quick-console-logger.qinfo",
-      "title": "Insert console.info"
-    },
-    {
-      "command": "quick-console-logger.removeLog",
-      "title": "Remove all console statements"
-    },
-    {
-      "command": "quick-console-logger.commentLog",
-      "title": "Comment all console statements"
-    },
-    {
-      "command": "quick-console-logger.uncommentLog",
-      "title": "Uncomment all console statements"
-    }
-  ],
-  "keybindings": [
-    {
-      "command": "quick-console-logger.qlog",
-      "key": "ctrl+1",
-      "mac": "cmd+1",
-      "when": "editorTextFocus"
-    },
-    {
-      "command": "quick-console-logger.qerror",
-      "key": "ctrl+2",
-      "mac": "cmd+2",
-      "when": "editorTextFocus"
-    },{
-      "command": "quick-console-logger.commentLog",
-      "key": "ctrl+f2",
-      "mac": "cmd+f2",
-      "when": "editorTextFocus"
-    }
-  ]
+      {
+        "command": "quick-console-logger.qlog",
+        "title": "Insert console.log"
+      },
+      {
+        "command": "quick-console-logger.qerror",
+        "title": "Insert console.error"
+      },
+      {
+        "command": "quick-console-logger.qwarn",
+        "title": "Insert console.warn"
+      },
+      {
+        "command": "quick-console-logger.qinfo",
+        "title": "Insert console.info"
+      },
+      {
+        "command": "quick-console-logger.removeLog",
+        "title": "Remove all console statements"
+      },
+      {
+        "command": "quick-console-logger.commentLog",
+        "title": "Comment all console statements"
+      },
+      {
+        "command": "quick-console-logger.uncommentLog",
+        "title": "Uncomment all console statements"
+      }
+    ],
+    "keybindings": [
+      {
+        "command": "quick-console-logger.qlog",
+        "key": "ctrl+1",
+        "mac": "cmd+1",
+        "when": "editorTextFocus"
+      },
+      {
+        "command": "quick-console-logger.qerror",
+        "key": "ctrl+2",
+        "mac": "cmd+2",
+        "when": "editorTextFocus"
+      },
+      {
+        "command": "quick-console-logger.commentLog",
+        "key": "ctrl+f2",
+        "mac": "cmd+f2",
+        "when": "editorTextFocus"
+      }
+    ]
   },
   "scripts": {
     "vscode:prepublish": "pnpm run package",
@@ -127,21 +138,22 @@
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "pnpm run compile-tests && pnpm run compile && pnpm run lint",
     "lint": "eslint src",
-    "test": "vscode-test"
+   "test": "vitest"
   },
   "devDependencies": {
-    "@types/vscode": "^1.97.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
+    "@types/vscode": "^1.97.0",
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "@typescript-eslint/parser": "^8.22.0",
-    "eslint": "^9.19.0",
-    "typescript": "^5.7.3",
-    "ts-loader": "^9.5.2",
-    "webpack": "^5.97.1",
-    "webpack-cli": "^6.0.1",
     "@vscode/test-cli": "^0.0.10",
-    "@vscode/test-electron": "^2.4.1"
+    "@vscode/test-electron": "^2.4.1",
+    "eslint": "^9.19.0",
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.7.3",
+    "vitest": "^3.0.7",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1"
   },
   "license": "MIT"
 }
