扩展改名为log-rush

--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "quick-console-logger",
-  "displayName": "Quick Console Logger",
+  "name": "log-rush",
+  "displayName": "LogRush",
   "description": "Quickly add and remove console.log statements with powerful shortcuts.Code faster, debug better, clean up easier! ",
-  "version": "1.0.0",
+  "version": "1.0.1",
+  "publisher": "davidLi_317",
+  "repository": "https://github.com/davidLi17/extensionProject",
+  "issues": "https://github.com/davidLi17/extensionProject/issues",
+  "icon": "logo.png",
   "engines": {
     "vscode": ">=1.97.0"
   },
@@ -16,14 +20,14 @@
   "main": "./dist/extension.js",
   "contributes": {
     "configuration": {
-      "title": "quick-console-logger",
+      "title": "log-rush",
       "properties": {
-        "quick-console-logger.VarPilotSymbol": {
+        "log-rush.VarPilotSymbol": {
           "type": "string",
           "default": "::",
           "description": "Variable Identifier|变量标识符号"
         },
-        "quick-console-logger.QuotationMark": {
+        "log-rush.QuotationMark": {
           "type": "string",
           "enum": [
             "single",
@@ -32,22 +36,22 @@
           "default": "double",
           "description": "Quotation Mark Type (Single or Double)|引号类型（单引号或双引号）"
         },
-        "quick-console-logger.ShowLogSemicolon": {
+        "log-rush.ShowLogSemicolon": {
           "type": "boolean",
           "default": true,
           "description": "Show Semicolon at the End of console.log|是否在 console.log 语句末尾显示分号"
         },
-        "quick-console-logger.LogMethod": {
+        "log-rush.LogMethod": {
           "type": "string",
           "default": "console.log",
           "description": "Log Method (e.g., console.log, console.info)|日志方法（如：console.log, console.info 等）"
         },
-        "quick-console-logger.ShowLineTag": {
+        "log-rush.ShowLineTag": {
           "type": "boolean",
           "default": true,
           "description": "Show Line Tag|是否显示行号标记"
         },
-        "quick-console-logger.LineTagAtBeginOrEnd": {
+        "log-rush.LineTagAtBeginOrEnd": {
           "type": "string",
           "enum": [
             "begin",
@@ -56,12 +60,12 @@
           "default": "begin",
           "description": "Line Tag Position (Beginning or End)|行号标记位置（开始或结束）"
         },
-        "quick-console-logger.ShowFilePath": {
+        "log-rush.ShowFilePath": {
           "type": "boolean",
           "default": true,
           "description": "whether Show File Path|是否显示文件路径"
         },
-        "quick-console-logger.FilePathType": {
+        "log-rush.FilePathType": {
           "type": "string",
           "default": "short",
           "enum": [
@@ -71,7 +75,7 @@
           ],
           "description": "File Path Format Type (short, full, custom)|文件路径显示类型：short(仅文件名)、full(相对路径)、custom(自定义)"
         },
-        "quick-console-logger.CustomFormat": {
+        "log-rush.CustomFormat": {
           "type": "string",
           "default": "${fileName} ${varName}::: ",
           "description": "Custom log format, available variables: ${fileName}, ${filePath}, ${fullPath}, ${varName}, ${lineNumber}|自定义日志格式，可用变量：${fileName}, ${filePath}, ${fullPath}, ${varName}, ${lineNumber}"
@@ -80,49 +84,55 @@
     },
     "commands": [
       {
-        "command": "quick-console-logger.qlog",
+        "command": "log-rush.qlog",
         "title": "Insert console.log"
       },
       {
-        "command": "quick-console-logger.qerror",
+        "command": "log-rush.qerror",
         "title": "Insert console.error"
       },
       {
-        "command": "quick-console-logger.qwarn",
+        "command": "log-rush.qwarn",
         "title": "Insert console.warn"
       },
       {
-        "command": "quick-console-logger.qinfo",
+        "command": "log-rush.qinfo",
         "title": "Insert console.info"
       },
       {
-        "command": "quick-console-logger.removeLog",
+        "command": "log-rush.removeLog",
         "title": "Remove all console statements"
       },
       {
-        "command": "quick-console-logger.commentLog",
+        "command": "log-rush.commentLog",
         "title": "Comment all console statements"
       },
       {
-        "command": "quick-console-logger.uncommentLog",
+        "command": "log-rush.uncommentLog",
         "title": "Uncomment all console statements"
       }
     ],
     "keybindings": [
       {
-        "command": "quick-console-logger.qlog",
+        "command": "log-rush.qlog",
         "key": "ctrl+1",
         "mac": "cmd+1",
         "when": "editorTextFocus"
       },
       {
-        "command": "quick-console-logger.qerror",
+        "command": "log-rush.qerror",
         "key": "ctrl+2",
         "mac": "cmd+2",
         "when": "editorTextFocus"
       },
       {
-        "command": "quick-console-logger.commentLog",
+        "command": "log-rush.commentLog",
+        "key": "ctrl+f1",
+        "mac": "cmd+f1",
+        "when": "editorTextFocus"
+      },
+      {
+        "command": "log-rush.removeLog",
         "key": "ctrl+f2",
         "mac": "cmd+f2",
         "when": "editorTextFocus"
@@ -131,14 +141,14 @@
   },
   "scripts": {
     "vscode:prepublish": "pnpm run package",
+    "mytest": "mocha out/test/**/*.test.js",
     "compile": "webpack",
     "watch": "webpack --watch",
     "package": "webpack --mode production --devtool hidden-source-map",
     "compile-tests": "tsc -p . --outDir out",
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "pnpm run compile-tests && pnpm run compile && pnpm run lint",
-    "lint": "eslint src",
-   "test": "vitest"
+    "lint": "eslint src"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.10",
@@ -151,7 +161,6 @@
     "eslint": "^9.19.0",
     "ts-loader": "^9.5.2",
     "typescript": "^5.7.3",
-    "vitest": "^3.0.7",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1"
   },
