最好一个测试表现最好的版本

--- a/package.json
+++ b/package.json
@@ -132,9 +132,15 @@
         "when": "editorTextFocus"
       },
       {
-        "command": "log-rush.removeLog",
+        "command": "log-rush.uncommentLog",
         "key": "ctrl+f2",
         "mac": "cmd+f2",
+        "when": "editorTextFocus"
+      },
+      {
+        "command": "log-rush.removeLog",
+        "key": "ctrl+f3",
+        "mac": "cmd+f3",
         "when": "editorTextFocus"
       }
     ]
