--- a/package.json
+++ b/package.json
@@ -138,7 +138,7 @@
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "pnpm run compile-tests && pnpm run compile && pnpm run lint",
     "lint": "eslint src",
-   "test": "vitest"
+    "test": "vitest"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.10",
@@ -155,5 +155,8 @@
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "quick-console-logger": "."
+  }
 }
