--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,4 @@
+//@ts-ignore
 {
 	"compilerOptions": {
 		"baseUrl": "./", // 设置基础路径为项目根目录
@@ -14,5 +15,6 @@
 		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
 		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
 		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
-	}
+	},
+	"exclude": ["utils/**/*"]
 }
