写了一半的获取context里面的函数名和对象名

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "log-rush",
 	"displayName": "LogRush",
 	"description": "Quickly add and remove console.log statements with powerful shortcuts.Code faster, debug better, clean up easier! ",
-	"version": "1.0.1",
+	"version": "1.1.0",
 	"publisher": "davidLi317",
 	"repository": "https://github.com/davidLi17/extensionProject",
 	"issues": "https://github.com/davidLi17/extensionProject/issues",
@@ -109,6 +109,7 @@
 		"views": {
 			"log-rush-explorer": [
 				{
+					"icon": "$(file-code)",
 					"id": "logRushExplorer",
 					"name": "日志浏览器"
 				}
@@ -255,6 +256,12 @@
 		"typescript": "^5.7.3",
 		"webpack": "^5.97.1",
 		"webpack-cli": "^6.0.1"
+	},
+	"dependencies": {
+		"@babel/parser": "^7.23.0",
+		"@babel/traverse": "^7.23.0",
+		"@babel/types": "^7.23.0",
+		"@types/babel__traverse": "^7.20.7"
 	},
 	"license": "MIT"
 }
