--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,55 @@
-out
-dist
-node_modules
+# Build output
+out/
+dist/
+build/
+
+# Dependencies
+node_modules/
+
+# VSCode specific
 .vscode-test/
 *.vsix
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Operating System
+.DS_Store
+Thumbs.db
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# Coverage directory
+coverage/
+
+# Temporary files
+*.tmp
+*.temp
+.temp/
+
+# IDE specific files
+.idea/
+*.swp
+*.swo
+*.swn
+.history/
+
+# Test files
+__tests__/**/coverage/
+.nyc_output/
+
+# Package files
+package-lock.json
+yarn.lock
